fixed alignment issue

--- a/sites/all/themes/custom/ragno/css/style.css.less
+++ b/sites/all/themes/custom/ragno/css/style.css.less
@@ -836,6 +836,12 @@ div#primary{
     }
   }
 }
+
+
+.section-categories #main-content h1 {
+	width: 930px;
+}
+
 .section-categories .view-list-of-series{
   .views-row{
     height: 180px;
@@ -2525,6 +2531,8 @@ div#primary{
 }
 
 .section-technical{
+
+  color:#9EACAD;
   #columns{
     #sidebar-left{
       margin-left: -100%;
@@ -2616,4 +2624,9 @@ div#primary{
   background: url(/ragno/sites/all/themes/custom/ragno/images/login.jpg) no-repeat;
   border: none;
   font-size: 0;
+}
+
+.node  .node-content a{
+	 color: #46887E;
+	 text-decoration:none;
 }
